Improve cosmetics system part 2